iptables/iptables.rules
##############################################################################
#
### Author: Stanley Chan
### Version Saturday 12 January 2013 :: Complete ruleset
############	** Ran from IPTables.bash (31 Dec 2008) version and coverted with iptables-save; added and edited rules **
############			--Complete version: Full rules, with commented elements
############			--Active version:	Runs the same as the Complete version, but without the commented elements
#
## /etc/init.d/firewall
#
### Based on rules from:
### http://www.novell.com/coolsolutions/feature/18139.html
### http://www.linuxquestions.org/questions/linux-security-4/stealth-iptables-ruleset-21338/
### http://fixunix.com/security/17626-shields-up-reports-one-open-port-through-iptables.html
### http://www.dslreports.com/forum/r20642422-Help-Configuring-Router-IPTables-to-stealth-all-ports-
### http://www.remoteroot.net/category/firewall/
### http://www.remoteroot.net/2007/07/18/10/
### http://billauer.co.il/ipmasq-html.html
### http://ubuntuforums.org/showthread.php?t=159661
### https://www.linuxquestions.org/questions/linux-newbie-8/iptables-and-irc-clients.-158049/
### http://insidetrust.blogspot.com/2010/12/example-iptables-firewall-ruleset-for.html
#
##### BEGIN INIT INFO
## Provides: Firewall for Router/Modem/Switch [Westell Versalink 7500]
## Required-Start: $network syslog
## Required-Stop:
## Should-Stop:
## Default-Start: 3 4 5
## Default-Stop: 0 1 2 6
## Short-Description: Firewall Configuration
##### END INIT INFO
#
#
### Following no longer applied with 2011 version::
###		xx Modified script for Ubuntu build; lines with eth0 have been replaced with wlan1 to accomodate for wireless. xx
#
##############################################################################


# Generated by iptables-save v1.4.16.3 on Sat Jan 12 22:10:48 2013
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [28:3520]
:tcpfilter - [0:0]

-A INPUT -i lo -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ppp0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o ppp0 -j ACCEPT

-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
#-A INPUT -p icmp -m icmp --icmp-type 8 -j DROP
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

-A INPUT -p tcp -j tcpfilter
-A tcpfilter -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
-A tcpfilter -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A tcpfilter -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A tcpfilter -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A tcpfilter -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A tcpfilter -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP

-A INPUT -p tcp -m tcp --dport 194 -j DROP
-A INPUT -p udp -m udp --dport 194 -j DROP
-A INPUT -p tcp -m tcp --dport 529 -j DROP
-A INPUT -p udp -m udp --dport 529 -j DROP
-A INPUT -p tcp -m tcp --dport 994 -j DROP
-A INPUT -p udp -m udp --dport 994 -j DROP
-A INPUT -p tcp -m tcp --dport 6667 -j DROP
-A INPUT -p udp -m udp --dport 6667 -j DROP

-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j DROP
-A INPUT -p tcp -m tcp --dport 0 -j DROP
-A INPUT -p udp -m udp --dport 0 -j DROP
-A INPUT -p tcp -m tcp --dport 1 -j DROP
-A INPUT -p udp -m udp --dport 1 -j DROP

-A INPUT -s 10.220.232.0/24 -j DROP
-A INPUT -s 10.220.231.236/32 -j DROP
-A FORWARD -s 10.220.231.236/32 -j DROP
-A FORWARD -s 10.220.232.0/24 -d 10.0.0.1/32 -j DROP

-A INPUT -p tcp -j DROP
-A INPUT -j DROP
-A OUTPUT -j DROP
-A FORWARD -j DROP
COMMIT

# Completed on Sat Jan 12 22:10:48 2013
# Generated by iptables-save v1.4.16.3 on Sat Jan 12 22:10:48 2013
*mangle
:PREROUTING ACCEPT [3078:458758]
:INPUT ACCEPT [2157:325474]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [32:4580]
:POSTROUTING ACCEPT [46:7086]
COMMIT

# Completed on Sat Jan 12 22:10:48 2013
# Generated by iptables-save v1.4.16.3 on Sat Jan 12 22:10:48 2013
*nat
:PREROUTING ACCEPT [2239:305218]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [24:2804]
:POSTROUTING ACCEPT [24:2804]
#-A PREROUTING -d 10.0.0.1/32 -p tcp -m tcp --dport 25 -j DNAT --to-destination 192.168.1.254
#-A PREROUTING -d 10.0.0.1/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.10.253
#-A PREROUTING -d 10.0.0.1/32 -p tcp -m tcp --dport 110 -j DNAT --to-destination 192.168.10.254
#-A PREROUTING -d 10.0.0.1/32 -p tcp -m tcp --dport 444 -j DNAT --to-destination 192.168.10.254:443
#-A POSTROUTING -s 193.168.1.0/24 -p tcp -m tcp -j SNAT --to-source :10000-20000
#-A POSTROUTING -s 193.168.1.0/24 -p udp -m udp -j SNAT --to-source :10000-20000
#-A POSTROUTING -s 192.168.1.0/24 -j SNAT --to-source 10.0.0.1
-A POSTROUTING -j MASQUERADE
COMMIT
# Completed on Sat Jan 12 22:10:48 2013
