iptables/iptables_old.rules
##############################################################################
#
### Author: Stanley Chan
### Version 05 January 2011 :: Complete ruleset
############	** Ran from IPTables.bash (31 Dec 2008) version and coverted with iptables-save; added and edited rules **
############			--Complete version: Full rules, with commented elements
############			--Active version:	Runs the same as the Complete version, but without the commented elements
#
## /etc/init.d/firewall
#
### Based on rules from:
### http://www.novell.com/coolsolutions/feature/18139.html
### http://www.linuxquestions.org/questions/linux-security-4/stealth-iptables-ruleset-21338/
### http://fixunix.com/security/17626-shields-up-reports-one-open-port-through-iptables.html
### http://www.dslreports.com/forum/r20642422-Help-Configuring-Router-IPTables-to-stealth-all-ports-
### http://www.remoteroot.net/category/firewall/
### http://www.remoteroot.net/2007/07/18/10/
### http://billauer.co.il/ipmasq-html.html
### http://ubuntuforums.org/showthread.php?t=159661
### https://www.linuxquestions.org/questions/linux-newbie-8/iptables-and-irc-clients.-158049/
### http://insidetrust.blogspot.com/2010/12/example-iptables-firewall-ruleset-for.html
#
##### BEGIN INIT INFO
## Provides: Firewall for Router/Modem/Switch [Westell Versalink 7500]
## Required-Start: $network syslog
## Required-Stop:
## Should-Stop:
## Default-Start: 3 4 5
## Default-Stop: 0 1 2 6
## Short-Description: Firewall Configuration
##### END INIT INFO
#
#
### Following no longer applied with 2011 version::
###		xx Modified script for Ubuntu build; lines with eth0 have been replaced with wlan1 to accomodate for wireless. xx
#
##############################################################################

# Generated by iptables-save v1.4.0 on Wed Jan  5 10:41:14 2011
*nat
:PREROUTING ACCEPT [233:28932]
:OUTPUT ACCEPT [287:18648]
:POSTROUTING ACCEPT [6:384]
-A PREROUTING -d 10.0.0.1/32 -i eth0 -p tcp -m tcp --dport 25 -j DNAT --to-destination 192.168.1.254
-A PREROUTING -d 10.0.0.1/32 -i eth0 -p tcp -m tcp --dport 110 -j DNAT --to-destination 192.168.10.254
-A PREROUTING -d 10.0.0.1/32 -i eth0 -p tcp -m tcp --dport 444 -j DNAT --to-destination 192.168.10.254:443
-A PREROUTING -d 10.0.0.1/32 -i eth0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.10.253
-A POSTROUTING -s 192.168.1.0/24 -o eth0 -j SNAT --to-source 10.0.0.1
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Wed Jan  5 10:41:14 2011
# Generated by iptables-save v1.4.0 on Wed Jan  5 10:41:14 2011
*mangle
:PREROUTING ACCEPT [872:315802]
:INPUT ACCEPT [863:314938]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [602:62871]
:POSTROUTING ACCEPT [602:62871]
COMMIT
# Completed on Wed Jan  5 10:41:14 2011
# Generated by iptables-save v1.4.0 on Wed Jan  5 10:41:14 2011
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [281:18264]
:tcpfilter - [0:0]
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 194 -j DROP
-A INPUT -p udp -m udp --dport 194 -j DROP
-A INPUT -p tcp -m tcp --dport 529 -j DROP
-A INPUT -p udp -m udp --dport 529 -j DROP
-A INPUT -p tcp -m tcp --dport 994 -j DROP
-A INPUT -p udp -m udp --dport 994 -j DROP
-A INPUT -p tcp -m tcp --dport 6667 -j DROP
-A INPUT -p udp -m udp --dport 6667 -j DROP
-A INPUT -s 10.220.232.0/24 -i eth0 -j DROP
-A INPUT -s 10.220.231.236/32 -i eth0 -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 0 -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 1 -j DROP
-A INPUT -i eth0 -p udp -m udp --dport 0 -j DROP
-A INPUT -i eth0 -p udp -m udp --dport 1 -j DROP
-A INPUT -j DROP
-A INPUT -p tcp -j tcpfilter
-A INPUT -i lo -j ACCEPT
-A INPUT -i -s -j ACCEPT
#-A INPUT -s 192.168.1.0/24 -i wlan1 -j ACCEPT
#-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
#-A INPUT -d 10.0.0.1/32 -i eth0 -p tcp -m tcp --dport 2202 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --sport 67 -j DROP
#-A INPUT -i eth0 -j LOG --log-prefix "INPUT   "
-A INPUT -p tcp -j DROP
-A FORWARD -s 10.220.232.0/24 -d 10.0.0.1/32 -i eth0 -j DROP
-A FORWARD -s 10.220.231.236/32 -i eth0 -j DROP
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i -o -j ACCEPT
#-A FORWARD -i eth0 -o wlan1 -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -i wlan1 -o eth0 -j ACCEPT
-A FORWARD -i ppp0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o ppp0 -j ACCEPT
-A FORWARD -j DROP
-A FORWARD -i -o -j ACCEPT
#-A FORWARD -i eth0 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 25 -j ACCEPT
#-A FORWARD -i eth0 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 110 -j ACCEPT
#-A FORWARD -o wlan1 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 443 -j ACCEPT
#-A FORWARD -i eth0 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m tcp --dport 80 -j ACCEPT
#-A FORWARD -j LOG --log-prefix "FORWARD  "
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -m state --state NEW -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o -d -j ACCEPT
#-A OUTPUT -d 192.168.1.0/24 -o wlan1 -j ACCEPT
#-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
#-A OUTPUT -o eth0 -j LOG --log-prefix "OUTPUT  "
-A tcpfilter -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A tcpfilter -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A tcpfilter -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A tcpfilter -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A tcpfilter -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A tcpfilter -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
COMMIT
